force-app/main/default/objects/GitHub_Issues__x/GitHub_Issues__x.object-meta.xml
<CustomObject>
    <description>GitHub Issues</description>
    <externalDataSource>Repo</externalDataSource>
    <externalName>GitHub Issues</externalName>
    <label>GitHub Issues</label>
    <pluralLabel>GitHub Issues</pluralLabel>
</CustomObject>