force-app/main/default/objects/GitHub_Issues__x/fields/AssigneeId__c.field-meta.xml
<CustomField>
    <fullName>AssigneeId__c</fullName>
    <description>Assignee Id</description>
    <externalDeveloperName>AssigneeId</externalDeveloperName>
    <label>Assignee Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>