force-app/main/default/objects/GitHub_Issues__x/fields/ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>ClosedDate__c</fullName>
    <description>ClosedDate</description>
    <externalDeveloperName>ClosedDate</externalDeveloperName>
    <label>ClosedDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>