force-app/main/default/objects/GitHub_Issues__x/fields/IssueURL__c.field-meta.xml
<CustomField>
    <fullName>IssueURL__c</fullName>
    <description>Issue URL</description>
    <externalDeveloperName>IssueURL</externalDeveloperName>
    <label>Issue URL</label>
    <type>Url</type>
</CustomField>