force-app/main/default/objects/GitHub_Issues__x/fields/PullRequest__c.field-meta.xml
<CustomField>
    <fullName>PullRequest__c</fullName>
    <description>Pull Request</description>
    <externalDeveloperName>PullRequest</externalDeveloperName>
    <label>Pull Request</label>
    <type>Url</type>
</CustomField>