force-app/main/default/objects/GitHub_Issues__x/fields/RepositoryURL__c.field-meta.xml
<CustomField>
    <fullName>RepositoryURL__c</fullName>
    <description>RepositoryURL</description>
    <externalDeveloperName>RepositoryURL</externalDeveloperName>
    <label>RepositoryURL</label>
    <type>Url</type>
</CustomField>