force-app/main/default/objects/GitHub_Issues__x/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>User</description>
    <externalDeveloperName>User</externalDeveloperName>
    <label>User</label>
    <length>255</length>
    <referenceTargetField>User.GitHub_Username__c</referenceTargetField>
    <referenceTo>User</referenceTo>
    <relationshipName>GitHub_Issues</relationshipName>
    <type>IndirectLookup</type>
</CustomField>